...
				} else if viewModel.isEmpty {
					emptyView
				} else {
					listView
				}
			}
			.navigationTitle("Podcasts")
			.refreshable {
				await viewModel.retryInitial()
			}
		}
		.task {
			await viewModel.onAppear()
...
